--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
   <h2>Biography</h2>
-  <p> I am a CS master student at Peking University (PKU), advised by Prof. Jian Zhang. I got a B.E. degree at Central South University in 2018.
+  <p> I am a CS master student at Peking University (PKU), advised by Prof. Jian Zhang and Siwei Ma. I got a B.E. degree at Central South University in 2018.
   </p>
   <p>My research interests include computer vision and machine learning, specifically for person re-identification.</p>
 
