--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- #12 -->
   <tr>
     <td class="pub_td1"><img src="./mengxijia_files/mebnet.png" class="papericon"></td>
-    <td class="pub_td2">Yunpeng Zhai, Qixiang Ye, Shijian Lu, <u>Mengxi Jia</u>, Rongrong Ji, Yonghong Tian
+    <td class="pub_td2"><a href="http://yunpengzhai.github.io">Yunpeng Zhai</a>, Qixiang Ye, Shijian Lu, <u>Mengxi Jia</u>, Rongrong Ji, Yonghong Tian
       <br><b>Multiple Expert Brainstorming for Domain Adaptive Person Re-identification</b>
       <br>European Conference on Computer Vision (ECCV), 2020
       <br>
@@ -91,7 +91,7 @@
   <!-- #10 -->
   <tr>
     <td class="pub_td1"><img src="./mengxijia_files/IJCAI.png" class="papericon"></td>
-    <td class="pub_td2"><u>Mengxi Jia</u>, Yunpeng Zhai, Shijian Lu, Siwei Ma, Jian Zhang
+    <td class="pub_td2"><u>Mengxi Jia</u>, <a href="http://yunpengzhai.github.io">Yunpeng Zhai</a>, Shijian Lu, Siwei Ma, Jian Zhang
       <br><b>A Similarity Inference Metric for RGB-Infrared Cross-Modality Person Re-identification</b>
       <br>International Joint Conference on Artificial Intelligence (IJCAI), 2020.
       <br>
