--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <table class="pub_table">
   <tbody>
   
-  <td class="pub_td1"><img src="./YunpengZhai_files/996.png" class="papericon"></td>
+  <td class="pub_td1"><img src="https://yunpengzhai.github.io/YunpengZhai_files/996.png" class="papericon"></td>
   <td class="pub_td2"><u>Mengxi Jia</u>, Xinhua Cheng, Yunpeng Zhai, Shijian Lu, Siwei Ma, Yonghong Tian, Jian Zhang
     <br><b>Matching on Sets: Conquer Occluded Person Re-identification Without Alignment</b>
     <br>AAAI Conference on Artificial Intelligence (AAAI), 2021.
