--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 <h2>News</h2>
 <ul>
   <li>
+    Dec. 2020: One paper [MoS] was accepted by AAAI 2021!
+  </li>
+  
+  <li>
     Jul. 2020: One paper [MEB-Net] was accepted by ECCV 2020!
   </li>
 
